# ChangeLog for dev-util/diffstat
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/diffstat/ChangeLog,v 1.88 2009/10/07 11:46:03 tcunha Exp $

*diffstat-1.50 (07 Oct 2009)

  07 Oct 2009; Tiago Cunha <tcunha@gentoo.org> +diffstat-1.50.ebuild:
  Version bump.

  05 Oct 2009; Tiago Cunha <tcunha@gentoo.org> -diffstat-1.47.ebuild:
  Remove old.

  27 Sep 2009; nixnut <nixnut@gentoo.org> diffstat-1.48.ebuild:
  ppc stable #284835

  21 Sep 2009; Tom Gall <tgall@gentoo.org> diffstat-1.48.ebuild:
  stable on ppc64, bug #284835

  19 Sep 2009; Raúl Porcel <armin76@gentoo.org> diffstat-1.48.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #284835

  19 Sep 2009; Markus Meier <maekke@gentoo.org> diffstat-1.48.ebuild:
  amd64/arm stable, bug #284835

  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org> diffstat-1.48.ebuild:
  stable x86, bug 284835

*diffstat-1.49 (07 Sep 2009)

  07 Sep 2009; Tiago Cunha <tcunha@gentoo.org> +diffstat-1.49.ebuild:
  Version bump.

*diffstat-1.48 (13 Aug 2009)

  13 Aug 2009; Tiago Cunha <tcunha@gentoo.org> +diffstat-1.48.ebuild:
  Version bump.

  01 Jun 2009; Tiago Cunha <tcunha@gentoo.org>
  -files/diffstat-1.37-hard-locale.patch, -diffstat-1.43.ebuild,
  -diffstat-1.45.ebuild, -diffstat-1.46.ebuild, diffstat-1.47.ebuild:
  - Beautify DESCRIPTION.
  - Remove old.

  31 May 2009; Brent Baude <ranger@gentoo.org> diffstat-1.47.ebuild:
  stable ppc64, bug 269899

  18 May 2009; Raúl Porcel <armin76@gentoo.org> diffstat-1.47.ebuild:
  arm/ia64/s390/sh stable stable wrt #269899

  16 May 2009; nixnut <nixnut@gentoo.org> diffstat-1.47.ebuild:
  ppc stable #269899

  16 May 2009; Tobias Klausmann <klausman@gentoo.org> diffstat-1.47.ebuild:
  Stable on alpha, bug #269899

  15 May 2009; Markus Meier <maekke@gentoo.org> diffstat-1.47.ebuild:
  amd64 stable, bug #269899

  15 May 2009; Ferris McCormick <fmccor@gentoo.org> diffstat-1.47.ebuild:
  Sparc stable, Bug #269899.
