@@ -1,8 +1,10 @@
 DIST diffstat-1.48.tgz 207061 RMD160 fed2d8b3ddd13acf12cfe93ec502404d6062785a SHA1 b2f0bd25903c1ef077296d964ac4e36596d47cea SHA256 faa9ab54868a47bf131250c94dd57249f595694435664240446ca76d3f708d0e
 DIST diffstat-1.49.tgz 208788 RMD160 519bd51bcc763cf656acd8f052bcd84c4debd483 SHA1 e485f28b23c5623bb8a8352b33f33276a239636e SHA256 933809134a66111d67d62144443ba71074a8920d3b0dcfd17f1f83b4f4f1f02f
 DIST diffstat-1.50.tgz 209660 RMD160 c92a3cd29ca97824938fd483b2beee65d4629f05 SHA1 9c9cc5072fcd162c4164aa4df4613faffaaaf164 SHA256 aee3c170adbdf3c31f3c38f221882c2c5d636e54be32d3431c1201eed5423cbc
+DIST diffstat-1.51.tgz 209813 RMD160 1e8baf30bb56165219daef6a9246bc2edc4896d5 SHA1 4d0d3a3a2dae4d4a53f5a2a913d4c349d79fdd83 SHA256 c0c83c6eea054cbf0a3a9c0621ae3bef1a9a33914d417f08569159c975644075
 EBUILD diffstat-1.48.ebuild 2248 RMD160 6f84ab26d19b8fa17455ef41bce3c11999f6ea86 SHA1 b526f606c38e4775d82b3d1045d2fe27a4ab6e4e SHA256 ed240b57df031c9ea201aa8bdf02ef0c215c345d6a9f04d927fd64724d1b854e
 EBUILD diffstat-1.49.ebuild 2248 RMD160 29c942c0f1ade0a0bef3c4b984c95ccc01b4e9df SHA1 40d76a082af960e2843013635963012533b09b1a SHA256 9c7151bc450397e113599a47cecb1f671943d74a9e7bda2cabe409a914b9da5b
 EBUILD diffstat-1.50.ebuild 645 RMD160 55cc8ee071392fc16fb9672854604538791abd0e SHA1 dbae1b5e1aebb62887a6f82dc10cbb4bce1875ae SHA256 19f1d88d758a2108d78c7feeb1f37855700e9ce8461c5cea5f5ee6df5978ed97
-MISC ChangeLog 10407 RMD160 b57585e1b433462670550acd60cbc55df438eba2 SHA1 a5135daa8c6ea325f6c60c3498c491f208cb69cb SHA256 d22a9c01637f22c7e1d038e160e5eb044ac282ccff78c7d8a51ee458b69887d8
+EBUILD diffstat-1.51.ebuild 645 RMD160 4350dc698240a4c97b7b8d3d2a287609de969a7a SHA1 5ea284e6872e201368a643d6887c117cf5b77f91 SHA256 8e74c4e5cc58cd5b05262ea99d984c5196505e4c65ee9344b763391f6b266732
+MISC ChangeLog 10524 RMD160 fbe1b973c6577e71b5134fa286bb5bb140bca037 SHA1 e4bfafc64f4e29899ef0ef9b57f64e72d3a63b0c SHA256 01dc42bfbb88dc6cd28af2ee6424428f734be4eea3091e4e7b7ed0e058ee5e79
 MISC metadata.xml 229 RMD160 44a95df62dfed6265e600ae06a17c9ad62a4710e SHA1 5627f7f9641da1e367d1570c1cd37d8f599a1d7f SHA256 707364f361d243f3a9e534958ccddba1796e567f7d7ba0fdcf100ec8736eab02
