@@ -1,0 +1,20 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/diffstat/diffstat-1.51.ebuild,v 1.1 2009/11/08 15:03:17 tcunha Exp $
+
+DESCRIPTION="Display a histogram of diff changes"
+HOMEPAGE="http://invisible-island.net/diffstat/diffstat.html"
+SRC_URI="ftp://invisible-island.net/diffstat/${P}.tgz"
+
+LICENSE="as-is"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE=""
+
+DEPEND=""
+RDEPEND=""
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc CHANGES || die "dodoc failed"
+}
