@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/diffstat
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/diffstat/ChangeLog,v 1.88 2009/10/07 11:46:03 tcunha Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/diffstat/ChangeLog,v 1.89 2009/11/08 15:03:17 tcunha Exp $
+
+*diffstat-1.51 (08 Nov 2009)
+
+  08 Nov 2009; Tiago Cunha <tcunha@gentoo.org> +diffstat-1.51.ebuild:
+  Version bump.
 
 *diffstat-1.50 (07 Oct 2009)
 
